objects/Account.object
<CustomObject>
    <fields>
        <fullName>Number_of_Opp__c</fullName>
        <label>Number of Opp</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Product_Holding__c</fullName>
        <label>Number of Product Holding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Reschedule__c</fullName>
        <label>Number of Reschedule</label>
        <summarizedField>Call_Report__c.Number_of_Reschedule__c</summarizedField>
        <summaryForeignKey>Call_Report__c.CIS_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Visited__c</fullName>
        <label>Number of Visited</label>
        <summaryFilterItems>
            <field>Call_Report__c.Contact_Channel__c</field>
            <operation>equals</operation>
            <value>Face to Face</value>
        </summaryFilterItems>
        <summaryForeignKey>Call_Report__c.CIS_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Office_Ext_MashUp__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Office Ext.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Fax_MashUp__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Office Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Mobile_MashUp__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Office Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Phone_MashUp__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Office Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Business_Info__c</fullName>
        <label>Other Business Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Product_Related__c</fullName>
        <label>Other Product Related</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Segment__c</fullName>
        <label>Other Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_System__c</fullName>
        <label>Other System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerChangeExecutedByTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OwnerChangeExecutedByTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerChangeExecutedFrUI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OwnerChangeExecutedFrUI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerID_Text__c</fullName>
        <formula>Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerID_Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Emp_ID__c</fullName>
        <formula>Owner.Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Emp ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_is_SME_Admin__c</fullName>
        <formula>If ( Owner.Profile.Name = &quot;SME-Admin&quot;, True, False )</formula>
        <label>Owner is SME-Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_or_Servicing__c</fullName>
        <description>เก็บค่าชื่อผู้ดูแลถ้าลูกค้าเป็น Port และเก็บค่า ชื่อ Service RM ถ้าลูกค้าไม่ได้เป็น Port (ในกรณีที่ลูกค้าเป็น Pool แต่ไม่มี Service RM จะเก็บค่าเป็นชื่อผู้ดูแล)</description>
        <formula>CASE(Ownership__c, &quot;Permanent&quot;,IF( Port_Pool__c = &quot;Pool&quot;, IF(Service_RM__c = &quot;&quot;,Owner_Name__c,Service_RM__r.FirstName &amp; &quot; &quot; &amp; Service_RM__r.LastName), Owner_Name__c),Owner_Name__c)</formula>
        <label>Owner or Servicing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_team_name_or_Servicing_team_name__c</fullName>
        <description>เก็บค่าทีมผู้ดูแลถ้าลูกค้าเป็น Port และเก็บค่า ชื่อทีม Service RM ถ้าลูกค้าไม่ได้เป็น Port (ในกรณีที่ลูกค้าเป็น Pool แต่ไม่มี Service RM จะเก็บค่าเป็นชื่อทีมผู้ดูแล)</description>
        <formula>CASE(Ownership__c, &quot;Permanent&quot;,IF( Port_Pool__c = &quot;Pool&quot;, IF(Service_RM__c = &quot;&quot;,Owner.Team_Name__c,Service_RM__r.Team_Name__c), Owner.Team_Name__c), Owner.Team_Name__c)</formula>
        <label>Owner team name or Servicing team name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Text__c</fullName>
        <label>Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <formula>CASE(Port_Pool__c, 
&quot;Port&quot;, &quot;Permanent&quot;, 
&quot;Pool&quot;,  CASE(Owner.Profile.Name,
                  &quot;SME-AH&quot;, &quot;Permanent&quot;,
                  &quot;SME-TM&quot;, IF(Temporary_Ownership_Flag__c, &quot;Temporary&quot;, &quot;Permanent&quot;),
                  &quot;SME-RM&quot;, &quot;Temporary&quot;, 
                  &quot;&quot;),                      
&quot;&quot;, IF(OR(Owner.Profile.Name = &quot;SME-RM&quot;,Owner.Profile.Name = &quot;SME-TM&quot;), &quot;Temporary&quot;, &quot;&quot;),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Main_Bank__c</fullName>
        <label>Payroll - Main Bank</label>
        <picklist>
            <picklistValues>
                <fullName>KBANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ธนชาติ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อิสลาม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ออมสิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.เกียรตินาคิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ก.ส.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXIM Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TISCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LH Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อ.ส.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payroll_Other_Reason_for_not_use_KBank__c</fullName>
        <label>Payroll - Other Reason for not use KBank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Other_Reason_for_using_Main__c</fullName>
        <label>Payroll - Other Reason for using Main</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Reason_for_not_use_KBank__c</fullName>
        <label>Payroll - Reason for not use KBank</label>
        <picklist>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ไม่พอใจในอัตราค่าธรรมเนียม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ไม่สะดวกต่อพนักงาน/ไม่มีตู้ใกล้บริษัท</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ไม่มีบริการมาเปิดบัญชีให้ที่บริษัท</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ไม่ได้เป็นธนาคารที่เดินบัญชีหลักอยู่</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Payroll_Reason_for_using_Main_Bank__c</fullName>
        <label>Payroll - Reason for  using Main Bank</label>
        <picklist>
            <picklistValues>
                <fullName>พึงพอใจในอัตราค่าธรรมเนียม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>สะดวก มีตู้อยู่ใกล้บริษัท</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>มีบริการมาเปิดบัญชีให้ที่บริษัท</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>เป็นธนาคารที่เดินบัญชีหลักอยู่</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Permanent_AH_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permanent AH Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Accounts (Permanent AH Name)</relationshipLabel>
        <relationshipName>AccountsPermanentAHName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permanent_NH_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permanent NH Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Accounts (Permanent NH Name)</relationshipLabel>
        <relationshipName>AccountsPermanentNHName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permanent_Owner_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permanent Owner Extension</label>
        <referenceTo>User_Extension__c</referenceTo>
        <relationshipLabel>Accounts (Permanent Owner Extension)</relationshipLabel>
        <relationshipName>AccountsPermanentOwnerExtension</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permanent_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permanent Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Permanent_Owners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permanent_Team_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permanent Team Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Accounts (Permanent Team Name)</relationshipLabel>
        <relationshipName>AccountsPermanentTeamName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personal_Email_MashUp__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Personal Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Personal_Mobile_MashUp__c</fullName>
        <formula>&quot;&quot;</formula>
        <label>Personal Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Sale__c</fullName>
        <label>Point of Sale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pool_1__c</fullName>
        <formula>IF( Port_Pool__c = &quot;Pool&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pool_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Pool_Flag_Previous_Owner__c</fullName>
        <label>Port / Pool Flag (Previous Owner)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Pool_No__c</fullName>
        <formula>IF(Port_Pool__c = &quot;Port&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Port_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port_Pool_Other__c</fullName>
        <description>Flag Port, Pool, Other ตาม Listview ในหน้าลูกค้า</description>
        <formula>CASE(Ownership__c, &quot;Permanent&quot;,Port_Pool__c,&quot;Other&quot;)</formula>
        <label>Port/ Pool/ Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Pool__c</fullName>
        <label>Port / Pool</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Pool_blank__c</fullName>
        <formula>IF (ISBLANK(Port_Pool__c),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Port_Pool_blank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_AH_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous AH Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Accounts (Previous AH Name)</relationshipLabel>
        <relationshipName>AccountsPreviousAHName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_NH_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous NH Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Accounts (Previous NH Name)</relationshipLabel>
        <relationshipName>AccountsPreviousNHName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_Emp_ID__c</fullName>
        <label>Previous Owner Emp ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner Extension</label>
        <referenceTo>User_Extension__c</referenceTo>
        <relationshipLabel>Accounts (Previous Owner Extension)</relationshipLabel>
        <relationshipName>AccountsPreviousOwnerExtension</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Owner_Segment_Code__c</fullName>
        <label>Previous Owner Segment Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Team_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Team Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Accounts (Previous Team Name)</relationshipLabel>
        <relationshipName>AccountsPreviousTeamName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Segment_Code__c</fullName>
        <label>Primary Segment Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Segment_Desc__c</fullName>
        <formula>CASE( Primary_Segment_Code__c , 
&quot;MB&quot;, &quot;Multi Corporate Banking&quot;,
&quot;MR&quot;, &quot;Multi Corporate Banking Restructure&quot;,
&quot;CB&quot;, &quot;Corporate Banking &quot;, 
&quot;CR&quot;, &quot;Corporate Banking Restructure&quot;, 
&quot;UM&quot;, &quot;Upper Medium SME&quot;, 
&quot;UR&quot;, &quot;Upper Medium SME Restructure&quot;,
&quot;LM&quot;, &quot;Lower Medium SME&quot;, 
&quot;LR&quot;, &quot;Lower Medium SME Restructure&quot;,
&quot;SM&quot;, &quot;Small SME&quot;, 
&quot;SR&quot;, &quot;Small SME Restructure&quot;,
&quot;XR&quot;, &quot;Micro Business Restructure&quot;, 
&quot;XS&quot;, &quot;Micro Business&quot;,
&quot;SO&quot;, &quot;Other SME&quot;, 
&quot;PC&quot;, &quot;Affluent Customer&quot;, 
&quot;PR&quot;, &quot;Affluent Restructure&quot;, 
&quot;MI&quot;, &quot;Middle Income Customer&quot;,
&quot;IR&quot;, &quot;Middle Income Restructure&quot;, 
&quot;TC&quot;, &quot; Mass Customer&quot;,
&quot;TR&quot;, &quot;Mass Restructure&quot;, 
&quot;OT&quot;, &quot;Others Customer&quot;,
&quot;RO&quot;, &quot;Other Retail&quot;,  
&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Segment Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Sub_Segment_Code__c</fullName>
        <label>Primary Sub Segment Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Create_Duration_Number__c</fullName>
        <formula>TODAY()-DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Create Duration (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Create_Duration__c</fullName>
        <formula>TEXT(TODAY()-DATEVALUE(CreatedDate)) &amp; &quot; Days&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Create Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_Code__c</fullName>
        <formula>Owner.RC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Contact__c</fullName>
        <inlineHelpText>Number of Contact Visit by RM</inlineHelpText>
        <label>RM Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Name__c</fullName>
        <formula>IF(Owner.Profile.Name = &apos;SME-RM&apos;,
Owner.FirstName &amp;&apos; &apos;&amp; Owner.LastName,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>CLMV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASEAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worldwide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RegisteredCapital__c</fullName>
        <description>Equity ส่วนของผู้ถือหุ้น - ทุนจดทะเบียน</description>
        <label>Registered Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Benefit__c</fullName>
        <formula>(Income_to_SME__c *1.5)- Benefit_Spent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Ownership_in_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Ownership in Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RetainedEarning__c</fullName>
        <description>Equity ส่วนของผู้ถือหุ้น - กำไร (ขาดทุน)สะสม</description>
        <label>Retained Earning</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Symbol__c</fullName>
        <formula>CASE ( TEXT( Risk__c ), 
&quot;Low&quot;, IMAGE(&quot;/resource/GreenLight&quot;,&quot;&quot;,20,20), 
&quot;Medium&quot;, IMAGE(&quot;/resource/YellowLight&quot;,&quot;&quot;,20,20),
&quot;High&quot;, IMAGE(&quot;/resource/RedLight&quot;,&quot;&quot;,20,20), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOW_Exposure_Per__c</fullName>
        <formula>SOW_Exposure__c  * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% ภาระหนี้ของ KBank เทียบทุก Bank</inlineHelpText>
        <label>%SOW Exposure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SOW_Exposure__c</fullName>
        <inlineHelpText>% ภาระหนี้ของ KBank เทียบทุก Bank</inlineHelpText>
        <label>SOW Exposure</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SOW_Limit_Per__c</fullName>
        <formula>SOW_Limit__c * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>%SOW Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SOW_Limit__c</fullName>
        <label>SOW Limit</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SOW_Outstanding_Per__c</fullName>
        <formula>SOW_Outstanding__c * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% การใช้วงเงิน KBank เทียบทุก Bank</inlineHelpText>
        <label>%SOW Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SOW_Outstanding__c</fullName>
        <inlineHelpText>% การใช้วงเงิน KBank เทียบทุก Bank</inlineHelpText>
        <label>SOW Outstanding</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVM_AH_Emp_ID__c</fullName>
        <label>SVM AH Emp ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVM_AH_Name__c</fullName>
        <label>SVM AH Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVM_Emp_ID__c</fullName>
        <label>SVM Emp ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVM_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SVM In Charge</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVM_NH_Emp_ID__c</fullName>
        <label>SVM NH Emp ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVM_NH_Name__c</fullName>
        <label>SVM NH Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVM_Name__c</fullName>
        <label>SVM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVM_RC_Code__c</fullName>
        <label>SVM RC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVM_TM_Emp_ID__c</fullName>
        <label>SVM TM Emp ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVM_TM_Name__c</fullName>
        <label>SVM TM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <formula>CASE( Primary_Segment_Code__c,
&quot;UM&quot;, IMAGE(&quot;/resource/SMESegment&quot;,&quot;SME&quot;),
&quot;UR&quot;, IMAGE(&quot;/resource/SMESegment&quot;,&quot;SME&quot;),
&quot;SM&quot;, IMAGE(&quot;/resource/SMESegment&quot;,&quot;SME&quot;),
&quot;SR&quot;, IMAGE(&quot;/resource/SMESegment&quot;,&quot;SME&quot;),
&quot;LM&quot;, IMAGE(&quot;/resource/SMESegment&quot;,&quot;SME&quot;),
&quot;LR&quot;, IMAGE(&quot;/resource/SMESegment&quot;,&quot;SME&quot;),
IMAGE(&quot;/resource/Non_SME_Segment&quot;,&quot;Non-SME&quot;,60,90))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_RM_Emp_ID__c</fullName>
        <formula>Service_RM__r.Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service RM Emp ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_RM_Flag__c</fullName>
        <formula>IF(ISBLANK(Service_RM__c), &quot;&quot;, 
IF(Service_RM_Valid__c , IMAGE(&quot;/resource/Greenflag&quot;,&quot;Valid&quot;,20,20), IMAGE(&quot;/resource/Redflag&quot;,&quot;Invalid&quot;,20,20)))</formula>
        <label>Service RM Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_RM_Valid__c</fullName>
        <formula>If(AND(Service_RM__r.IsActive = TRUE, Owner.RC_Code__c = Service_RM__r.RC_Code__c), TRUE, FALSE)</formula>
        <label>Service RM - Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System_Id__c</fullName>
        <label>Source System Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Good Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock_Day_on_Hand_Days__c</fullName>
        <label>Stock Day on Hand (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surname_EN_Prospect__c</fullName>
        <label>Surname (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surname_EN__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;SME_Customer&quot;, 
IMAGE($Label.MashupUrl+Encrypt_Surname_EN__c, &quot; &quot;), Surname_EN_Prospect__c)</formula>
        <label>Surname (EN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surname_TH_Prospect__c</fullName>
        <label>Surname (TH)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surname_TH__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;SME_Customer&quot;, 
IMAGE($Label.MashupUrl+Encrypt_Surname_TH__c, &quot; &quot;), Surname_TH_Prospect__c)</formula>
        <label>Surname (TH)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_Main_Bank__c</fullName>
        <label>TF - Main Bank</label>
        <picklist>
            <picklistValues>
                <fullName>KBANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ธนชาติ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อิสลาม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ออมสิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.เกียรตินาคิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ก.ส.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXIMBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TISCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LHBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อ.ส.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TF_Other_Reason_for_not_use_KBank__c</fullName>
        <label>TF - Other Reason for not use KBank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_Other_Reason_for_using_Main_Bank__c</fullName>
        <label>TF - Other Reason for using Main Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_Other_Reason_for_using_Second_Bank__c</fullName>
        <label>TF - Other Reason for using Second Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TF_Reason_for_not_use_KBank__c</fullName>
        <label>TF - Reason for not use KBank</label>
        <picklist>
            <picklistValues>
                <fullName>ผลิตภัณฑ์ไม่ตรงกับความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ได้วงเงินน้อย แตกต่างจากจำนวนที่ต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ติดปัญหาเรื่องหลักประกัน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อัตราค่าธรรมเนียมและดอกเบี้ยแพง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อนุมัติช้า ไม่ทันต่อความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM/Sale ไม่สามารถให้คำแนะนำ/แก้ปัญหาได้</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ติดเงื่อนไขสินเชื่อตามบริษัทในเครือ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ใช้ตั้งแต่รุ่นพ่อแม่ / ตั้งแต่เปิดกิจการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>